--- a/tr.html
+++ b/tr.html
@@ -30,7 +30,7 @@
           target="_blank"
         >
           <i class="ri-github-line"></i>
-          <p>source code</p>
+          <p>kaynak kodu</p>
         </a>
         <div class="lang">
           <a style="text-decoration: none" href="tr.html">
@@ -40,7 +40,6 @@
               aria-label="Turkey Flag"
             ></i>
           </a>
-
           <a style="text-decoration: none" href="index.html">
             <i
               class="em em-flag-um"
@@ -54,7 +53,7 @@
 
     <div class="container">
       <div class="search-text">
-        <p>Find weather conditions in anywhere</p>
+        <p>Her yerde hava kosullarini bulun</p>
       </div>
       <div class="search">
         <div class="city-search">
@@ -65,19 +64,17 @@
             <input
               id="input"
               type="text"
-              placeholder="write a city name and hit enter...."
+              placeholder="bir şehir adı yazın ve enter tuşuna basın...."
             />
           </div>
         </div>
         <div class="find-location flex button">
           <i class="ri-map-pin-fill"></i>
-          <p>find my location</p>
+          <p>konumumu bul</p>
         </div>
       </div>
 
       <div class="stats">
-
-
         <div class="loader">
           <div class="loader-inner">
             <div class="loader-line-wrap">
@@ -97,7 +94,6 @@
             </div>
           </div>
         </div>
-
 
         <div class="stat main">
           <div class="icon">
@@ -131,7 +127,7 @@
           <div class="sp wind-mhp">
             <div class="name flex">
               <i class="ri-windy-line"></i>
-              <p>wind /mph</p>
+              <p>rüzgar /mph</p>
             </div>
             <p class="v wind-mhp-val">5.6</p>
           </div>
@@ -139,7 +135,7 @@
           <div class="sp wind-kph">
             <div class="name flex">
               <i class="ri-windy-line"></i>
-              <p>wind /kph</p>
+              <p>rüzgar /kph</p>
             </div>
             <p class="v wind-kph-val">9.0</p>
           </div>
@@ -147,7 +143,7 @@
           <div class="sp wind-degree">
             <div class="name flex">
               <i class="ri-windy-line"></i>
-              <p>wind /c°</p>
+              <p>rüzgar /c°</p>
             </div>
             <p class="v wind-degree-val">210</p>
           </div>
@@ -155,14 +151,14 @@
           <div class="sp wind-dir">
             <div class="name flex">
               <i class="ri-windy-line"></i>
-              <p>wind dir.</p>
+              <p>rüzgar dir.</p>
             </div>
             <p class="v wind-dir-val">SSW</p>
           </div>
           <div class="sp humidity">
             <div class="name flex">
               <i class="ri-contrast-drop-2-line"></i>
-              <p>humidity</p>
+              <p>nem</p>
             </div>
             <p class="v humidity-val">78</p>
           </div>
@@ -170,7 +166,7 @@
           <div class="sp clouds">
             <div class="name flex">
               <i class="ri-cloud-line"></i>
-              <p>cloud</p>
+              <p>bulut</p>
             </div>
 
             <p class="v cloud-val">0</p>
@@ -179,7 +175,7 @@
           <div class="sp feelslike-c">
             <div class="name flex">
               <i class="ri-temp-cold-line"></i>
-              <p>feelslike /c°</p>
+              <p>hissedilen /c°</p>
             </div>
 
             <p class="v feelslike-c-val">19.0</p>
@@ -188,7 +184,7 @@
           <div class="sp feelslike-f">
             <div class="name flex">
               <i class="ri-temp-cold-line"></i>
-              <p>feelslike /f</p>
+              <p>hissedilen /f</p>
             </div>
 
             <p class="v feelslike-f-val">66.2</p>
@@ -199,7 +195,7 @@
           <div class="sp pressure-mb">
             <div class="name flex">
               <i class="ri-arrow-down-fill"></i>
-              <p>pressure /mb</p>
+              <p>basınç /mb</p>
             </div>
             <div class="v pressure-mb-val">1009.0</div>
           </div>
@@ -207,7 +203,7 @@
           <div class="sp pressure-in">
             <div class="name flex">
               <i class="ri-arrow-down-fill"></i>
-              <p>pressure /in</p>
+              <p>basınç /in</p>
             </div>
 
             <div class="v pressure-in-val">29.8</div>
@@ -216,7 +212,7 @@
           <div class="sp precip-mm">
             <div class="name flex">
               <i class="ri-bar-chart-box-line"></i>
-              <p>precip /mm</p>
+              <p>uçurum /mm</p>
             </div>
 
             <div class="v precip-mm-val">0.0</div>
@@ -225,7 +221,7 @@
           <div class="sp uv">
             <div class="name flex">
               <i class="ri-lightbulb-line"></i>
-              <p>uv</p>
+              <p>ultraviyole</p>
             </div>
             <div class="v uv-val">1.0</div>
           </div>
@@ -233,7 +229,7 @@
           <div class="sp gust-mph">
             <div class="name flex">
               <i class="ri-cloud-windy-line"></i>
-              <p>gust /mph</p>
+              <p>rüzgar /mph</p>
             </div>
             <div class="v gust-mph-val">12.1</div>
           </div>
@@ -241,7 +237,7 @@
           <div class="sp gust-kph">
             <div class="name flex">
               <i class="ri-cloud-windy-line"></i>
-              <p>gust /kph</p>
+              <p>rüzgar /kph</p>
             </div>
 
             <div class="v gust-kph-val">19.4</div>
@@ -250,7 +246,7 @@
           <div class="sp vis-km">
             <div class="name flex">
               <i class="ri-eye-off-line"></i>
-              <p>vis /km</p>
+              <p>görüş /km</p>
             </div>
             <div class="v vis-kmb-val">10.0</div>
           </div>
@@ -258,7 +254,7 @@
           <div class="sp vis-miles">
             <div class="name flex">
               <i class="ri-eye-off-line"></i>
-              <p>vis /miles</p>
+              <p>görüş /miles</p>
             </div>
 
             <div class="v vis-miles-val">6.0</div>
@@ -290,6 +286,6 @@
     </div>
   </body>
   <footer>
-    <p>made by snndmnsz with 🌈</p>
+    <p>snndmnsz tarafından 🍌 ile yapıldı</p>
   </footer>
 </html>
