--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet" />
     <script defer src="main.js"></script>
+  
     <title>weatherStat BETA</title>
   </head>
   <body>
@@ -76,7 +77,14 @@
       </div>
 
       <div class="stats">
-
+        <div class="error">
+          <img src="error.png" alt="" />
+          <p>
+            Sorry, couldn't get the data "<span class="error-message"></span>"
+            <br />
+            please try again...
+          </p>
+        </div>
 
         <div class="loader">
           <div class="loader-inner">
@@ -97,7 +105,6 @@
             </div>
           </div>
         </div>
-
 
         <div class="stat main">
           <div class="icon">
@@ -290,6 +297,6 @@
     </div>
   </body>
   <footer>
-    <p>made by snndmnsz with 🌈</p>
+    <p>made by snndmnsz with 🍌</p>
   </footer>
 </html>
