--- a/tr.html
+++ b/tr.html
@@ -75,6 +75,15 @@
       </div>
 
       <div class="stats">
+        <div class="error">
+          <img src="error.png" alt="" />
+          <p>
+            Üzgünüz, üstediğiniz "<span class="error-message"></span>" datayı alamadık.
+            <br />
+            lütfen tekrar deneyiniz...
+          </p>
+        </div>
+
         <div class="loader">
           <div class="loader-inner">
             <div class="loader-line-wrap">
