--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     />
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet" />
     <script defer src="main.js"></script>
-  
+
+
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+
     <title>weatherStat BETA</title>
   </head>
   <body>
@@ -25,7 +28,6 @@
       </div>
       <div class="right">
         <a
-          style="text-decoration: none; color: black"
           class="source-code button"
           href="https://github.com/snndmnsz"
           target="_blank"
@@ -295,7 +297,12 @@
         <div class="cloud"></div>
       </div>
     </div>
+
+    <div class="back-row-toggle splat-toggle">
+      <div class="rain back-row"></div>
+    </div>
   </body>
+
   <footer>
     <p>made by snndmnsz with 🍌</p>
   </footer>
