--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
   </body>
 
   <footer>
-    <p>made by snndmnsz with 🍌</p>
+    <p>made by snndmnsz with 🍌 , last updated: 00:17 September 11, 2021</p>
+    
   </footer>
 </html>
