change in front-end

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet" />
     <script defer src="main.js"></script>
 
-
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 
     <title>weatherStat BETA</title>
@@ -28,6 +27,14 @@
       </div>
       <div class="right">
         <a
+          class="chrome button"
+          href="https://github.com/snndmnsz"
+          target="_blank"
+        >
+          <i class="ri-chrome-fill"></i>
+          <p>chrome extension</p>
+        </a>
+        <a
           class="source-code button"
           href="https://github.com/snndmnsz"
           target="_blank"
@@ -35,23 +42,6 @@
           <i class="ri-github-line"></i>
           <p>source code</p>
         </a>
-        <div class="lang">
-          <a style="text-decoration: none" href="tr.html">
-            <i
-              class="em em-flag-tr"
-              aria-role="presentation"
-              aria-label="Turkey Flag"
-            ></i>
-          </a>
-
-          <a style="text-decoration: none" href="index.html">
-            <i
-              class="em em-flag-um"
-              aria-role="presentation"
-              aria-label="U.S. Outlying Islands Flag"
-            ></i>
-          </a>
-        </div>
       </div>
     </div>
 
@@ -305,6 +295,5 @@
 
   <footer>
     <p>made by snndmnsz with 🍌 , last updated: 00:17 September 11, 2021</p>
-    
   </footer>
 </html>
