--- a/index.html
+++ b/index.html
@@ -291,9 +291,11 @@
     <div class="back-row-toggle splat-toggle">
       <div class="rain back-row"></div>
     </div>
+
+    <div class="footer">
+    <p>made by snndmnsz with 🍌 , last updated: 01:13 September 11, 2021</p>
+  </div>
   </body>
 
-  <footer>
-    <p>made by snndmnsz with 🍌 , last updated: 01:12 September 11, 2021</p>
-  </footer>
+  
 </html>
