--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     </div>
   </body>
 
-  <div class="footer">
+  <footer >
     <p>made by snndmnsz with 🍌 , last updated: 01:14 September 11, 2021</p>
-  </div>
+  </footer>
 </html>
